--- a/src/pages/Qualifications/Qualifications.css
+++ b/src/pages/Qualifications/Qualifications.css
@@ -1,16 +1,16 @@
-.About-Section {
+.Qualification-Section {
     text-align: left;
   }
       
-.About-Header {
-    background-color: #f5f5f5 ;
+.Qualification-Header {
+    background-color: #262626 ;
     min-height: 100vh;
     display: flex;
     flex-direction: column;
     align-items: left;
     justify-content: center;
     font-size: calc(10px + 2vmin);
-    color: #262626;
+    color: #f5f5f5;
     padding:100px;
   }
 
