--- a/src/sections/Main/Main.css
+++ b/src/sections/Main/Main.css
@@ -1,19 +1,19 @@
-.App {
+.Main {
   text-align: center;
 }
 
-.App-logo {
+.Main-logo {
   height: 40vmin;
   pointer-events: none;
 }
 
 @media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
+  .Main-logo {
+    animation: Main-logo-spin infinite 20s linear;
   }
 }
 
-.App-header {
+.Main-header {
   background-color: #262626 ;
   min-height: 100vh;
   display: flex;
@@ -24,7 +24,7 @@
   color: white;
 }
 
-@keyframes App-logo-spin {
+@keyframes Main-logo-spin {
   from {
     transform: rotate(360deg);
   }
