--- a/src/sections/About/About.css
+++ b/src/sections/About/About.css
@@ -1,17 +1,29 @@
 .About-Section {
     text-align: left;
+    background-color: #f5f5f5 ;
+    display: flex;
+    flex-wrap: wrap;
+    min-height: 100vh;
+    align-items: left;
+    justify-content: center;
+    padding:100px;
+    color: #262626;
+    font-size: calc(10px + 2vmin);
   }
       
 .About-Header {
-    background-color: #f5f5f5 ;
-    min-height: 100vh;
-    display: flex;
-    flex-direction: column;
-    align-items: left;
-    justify-content: center;
-    font-size: calc(10px + 2vmin);
-    color: #262626;
-    padding:100px;
+    flex: 75%;
   }
 
+  .About-Image{
+    flex: 25%;
+    width: 25%;
+    height: 25%;
+  }
   
+
+  @media (max-width: 800px) {
+    .About-Header, .About-Image {
+      flex: 100%;
+    }
+  }
