--- a/src/sections/Qualifications/Qualifications.css
+++ b/src/sections/Qualifications/Qualifications.css
@@ -1,8 +1,5 @@
 .Qualification-Section {
-    text-align: left;
-  }
-      
-.Qualification-Header {
+    text-align: right;
     background-color: #262626 ;
     min-height: 100vh;
     display: flex;
@@ -10,8 +7,11 @@
     align-items: left;
     justify-content: center;
     font-size: calc(10px + 2vmin);
-    color: #f5f5f5;
     padding:100px;
+  }
+      
+.Qualification-Header {    
+    color: #f5f5f5;
   }
 
   
