--- a/src/sections/Main/Main.css
+++ b/src/sections/Main/Main.css
@@ -14,7 +14,7 @@
 }
 
 .Main-header {
-  background-color: #262626 ;
+  background-color: #f5f5f5 ;
   background-image: url("mountains.jpg");
   background-position: center;
   background-repeat: no-repeat;
@@ -44,4 +44,5 @@
 .Main-Button a{
   color:#262626;
   text-decoration:none;
+  text-shadow: 3px 1px #f5f5f5;
 }
