--- a/src/sections/Contact/Contact.css
+++ b/src/sections/Contact/Contact.css
@@ -3,7 +3,7 @@
     background-color: #262626 ;
     display: flex;
     flex-wrap: wrap;
-    min-height: 100vh;
+    min-height: 50vh;
     align-items: left;
     padding:100px;
     color: #262626;
@@ -32,4 +32,5 @@
 
  .Contact-Links{
     color:#f5f5f5;
+    margin: 20px;
   }
