--- a/src/components/Project/Project.module.css
+++ b/src/components/Project/Project.module.css
@@ -1,7 +1,7 @@
 .ProjectContainer{
-    background-color: #262626;
-    color:#f5f5f5;
-    border:solid 2px #3f3f3f;
+    background-color: white;
+    color:#262626;
+    border-bottom:solid 3px #bfbfbf;
     margin:10px auto;
     padding:20px;
     flex-wrap: wrap;
@@ -25,5 +25,5 @@
 }
 
 a{
-    color:#f5f5f5;
+    color:#262626;
 }
