Fix layout for small devices

--- a/src/sections/Qualifications/Qualifications.css
+++ b/src/sections/Qualifications/Qualifications.css
@@ -27,3 +27,15 @@
   height:12vh;
 }
   
+@media (max-width: 800px) {
+  .Qualification-Section{
+    text-align: left;
+  }
+
+  .Qualification-Links{
+    margin-left: 20px;
+    margin-top: 50px;
+    
+  }
+
+}
