--- a/src/components/Project/Project.module.css
+++ b/src/components/Project/Project.module.css
@@ -2,28 +2,28 @@
     background-color: white;
     color:#262626;
     border-bottom:solid 3px #bfbfbf;
-    margin:10px auto;
+    margin:10px 20px 10px 0px;
     padding:20px;
-    flex-wrap: wrap;
-    display: flex;
+    flex:20%;
+    border-radius: 5px;
 }
 
 .ProjectImg{
-    flex: 25%;
-    width: 25%;
-    height: 25%;
-    margin:auto;
+    height:15vh;
+    margin: auto;
 }
 
 .ProjectTextContainer{
-    flex: 75%;
     margin:auto;
-}
-
-.ProjectText{
-    margin-left:20px
 }
 
 a{
     color:#262626;
 }
+
+@media (max-width: 800px) {
+    .ProjectContainer{
+        flex:100%;
+        margin:10px 0px 10px 0px;
+    }
+  }
