--- a/src/sections/Projects/Projects.css
+++ b/src/sections/Projects/Projects.css
@@ -1,30 +1,25 @@
 .Projects-Section {
     text-align: left;
     background-color: #f5f5f5 ;
-    display: flex;
-    flex-wrap: wrap;
     min-height: 100vh;
     align-items: left;
     padding:100px;
     color: #262626;
     font-size: calc(10px + 2vmin);
   }
-      
-.Projects-Header {
-    flex: 75%;
-    margin:auto;
-  }
 
-  .Projects-Image{
-    flex: 25%;
-    width: 25%;
-    height: 25%;
-    margin:auto;
+  .Projects-Container{
+    display: flex;
+    flex-wrap: wrap;
+
   }
-  
 
   @media (max-width: 800px) {
     .Projects-Header, .Projects-Image {
       flex: 100%;
+    }
+
+    .Projects-Section{
+      padding:10px;
     }
   }
