Style Load More button

--- a/src/sections/Projects/Projects.css
+++ b/src/sections/Projects/Projects.css
@@ -23,3 +23,16 @@
       padding:20px;
     }
   }
+
+  .ProjectsButton{
+    background-color: #262626;
+    text-align: center;
+    border-bottom:solid 3px black;
+    padding:20px;
+    border-radius: 5px;
+    margin:auto;
+    color:white;
+    font-weight: bolder;
+    text-decoration: none;
+    cursor: pointer;
+  }
