--- a/src/components/Footer/Footer.module.css
+++ b/src/components/Footer/Footer.module.css
@@ -27,9 +27,10 @@
   }
 
 
-  @media (max-width: 800px) {
+  @media (max-width: 1000px) {
     .FooterLeft, .FooterMiddle, .FooterRight {
       flex: 100%;
+      padding:20px;
     }
   }
 
