--- a/src/components/Nav/Nav.module.css
+++ b/src/components/Nav/Nav.module.css
@@ -6,7 +6,7 @@
     position: fixed;
     width: 100vw;
     z-index:100;
-  }
+}
 
 
 .NavItem{
@@ -34,3 +34,87 @@
 .NavLink:hover{
     color: #f5f5f5;
 }
+
+
+
+.HamburgerMenu{
+    background-color: #f5f5f5;
+    position:fixed;
+    padding:20px;
+    display:none;
+}
+
+.hamburger_lines
+{
+  display: block;
+
+  border-bottom: 8px solid #262626;
+  margin: 0 10px 10px 10px;
+  width: 50px;
+  height: 10px;
+}
+
+#one
+{
+  margin-top: 1px;
+}
+
+#one, #two, #three
+{
+    -webkit-animation: mouse-scroll 1s infinite;
+    -moz-animation: mouse-scroll 1s infinite;
+    animation: mouse-scroll 1s infinite;
+  
+}
+
+#one
+{
+  -webkit-animation-delay: .1s;
+  -moz-animation-delay: .1s;
+  -webkit-animation-direction: alternate;
+  
+  animation-direction: alternate;
+  animation-delay: alternate;
+}
+
+#two
+{
+  -webkit-animation-delay: .2s;
+  -moz-animation-delay: .2s;
+  -webkit-animation-direction: alternate;
+  
+  animation-delay: .2s;
+  animation-direction: alternate;
+  
+  margin-top: -6px;
+}
+
+#three
+{
+  -webkit-animation-delay: .3s;
+  -moz-animation-delay: .3s;
+  -webkit-animation-direction: alternate;
+  
+  animation-delay: .3s;
+  animation-direction: alternate;
+  
+  
+  margin-top: -6px;
+}
+
+@keyframes mouse-scroll {
+
+  0%   { opacity: 0; }
+  50%  { opacity: .5; }
+  100% { opacity: 1; }
+}
+
+@media (max-width: 1000px) {
+    .NavBar{
+        display:none;
+    }
+
+    .HamburgerMenu{
+        display:inherit;
+    }
+  }
