--- a/src/components/Nav/Nav.module.css
+++ b/src/components/Nav/Nav.module.css
@@ -8,7 +8,6 @@
     z-index:100;
 }
 
-
 .NavItem{
     background-color: #f5f5f5;
     padding: 12px;
@@ -35,13 +34,12 @@
     color: #f5f5f5;
 }
 
-
-
 .HamburgerMenu{
     background-color: #f5f5f5;
     position:fixed;
     padding:20px;
     display:none;
+    cursor: pointer;
 }
 
 .hamburger_lines
