--- a/src/components/Nav/Nav.module.css
+++ b/src/components/Nav/Nav.module.css
@@ -38,7 +38,6 @@
     background-color: #f5f5f5;
     position:fixed;
     padding:20px;
-    display:none;
     cursor: pointer;
 }
 
@@ -107,12 +106,29 @@
   100% { opacity: 1; }
 }
 
-@media (max-width: 1000px) {
+.HamNavBar, .HamburgerMenu{
+  display:none;
+  position:fixed;
+}
+
+#HamNav{
+    background-color:#f5f5f5;
+    width:100%;
+    padding-left: 120px;
+  }
+
+#HamNav .NavItem{
+    width:100%;
+    padding-right: 100px;
+    text-align: left;
+  }
+
+  @media (max-width: 1000px) {
     .NavBar{
         display:none;
     }
 
-    .HamburgerMenu{
+    .HamNavBar, .HamburgerMenu{
         display:inherit;
     }
   }
