Improve text content

--- a/src/sections/Qualifications/Qualifications.css
+++ b/src/sections/Qualifications/Qualifications.css
@@ -10,7 +10,7 @@
     padding:100px;
   }
       
-.Qualification-Header {    
+.Qualification-Header, .Qualification-Header a{    
     color: #f5f5f5;
   }
 
