Add Balena To Do List Project

--- a/src/components/Project/Project.module.css
+++ b/src/components/Project/Project.module.css
@@ -6,11 +6,13 @@
     padding:20px;
     flex:20%;
     border-radius: 5px;
+    min-width: 300px;
 }
 
 .ProjectImg{
-    height:15vh;
+    height: 15vh;
     margin: auto;
+    max-width: 100%;
 }
 
 .ProjectTextContainer{
