--- a/src/components/Project/Project.module.css
+++ b/src/components/Project/Project.module.css
@@ -25,8 +25,17 @@ a{
 
 .OpenProjectContainer{
     width: 100%;
-    background-color: red;
-    z-index:1020;
+    background-color: white;
+    color:#262626;
+    border-bottom:solid 3px #bfbfbf;
+    margin:10px 20px 10px 0px;
+    padding:20px;
+    flex:20%;
+    border-radius: 5px;
+}
+
+.OpenProjectImg{
+    width:100%
 }
 
 @media (max-width: 800px) {
