--- a/src/components/Project/Project.module.css
+++ b/src/components/Project/Project.module.css
@@ -24,11 +24,11 @@ a{
 }
 
 .OpenProjectContainer{
-    width: 100%;
+    max-width: 100vw;
     background-color: white;
     color:#262626;
     border-bottom:solid 3px #bfbfbf;
-    margin:10px 20px 10px 0px;
+    margin:10px 0px 10px 0px;
     padding:20px;
     flex:20%;
     border-radius: 5px;
