--- a/src/sections/About/About.css
+++ b/src/sections/About/About.css
@@ -20,6 +20,7 @@
     width: 25%;
     height: 25%;
     margin:auto;
+    border-radius: 100%;
   }
   
 
@@ -28,6 +29,9 @@
       flex: 100%;
     }
 
+    .About-Image{
+      padding: 100px;
+    }
     .About-Section{
       padding:20px;
     }
